[package]
name = "marketplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
idl-build = ["anchor-lang/idl-build", "switchboard-on-demand/idl-build"]


[dependencies]
anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
# anchor-spl = "0.31.0"
# switchboard-on-demand = "0.1.12"
#switchboard-on-demand = "0.2.0"
#switchboard-on-demand = { version = "0.4.7"}
switchboard-on-demand = { version = "0.10.0", features = ["anchor", "devnet"] }
